shady-KISS-skin History
-------------------------------------------
2015-07-04:
- New displayreplay and displaychannel
- Removed test- and debug-code
- Added posterbackgrounds
- Fixed bug in displayreplay
- Added setup for shift- and fade-times
- Some improvements for tvguideng-view

2015-07-02:
- Some more stuff for new design

2015-06-15:
- New layout for VDR-lists !WIP!

2015-04-12:
- Reworked setup
- Added blink for REC-text in displaychannel
- Small changes of messages
- Added three last recordings to showTimersRecordingsandInfos-option in main menu

2015-04-12:
- Fixed conditions for shorttext in displaymenuschedules
- Fixed displaymenusetup
- Added dedicated columnhandling to systeminfo, fritzbox and setup in displaymenudefault

2015-04-10:
- Added recchannelname in displaymenudetailrecordings
- Lightened textcolor
- Removed useless bracket in weatherforecastdetailcurrent
- New shadowbackgound for weatherforecastdetailcurrent
- Removed {visibility} in weatherforecastcurrent
- Some improvements for favorites in displaymenuschedules

2015-04-09:
- Increased fontsize of current and nexttitle in displaychannel if subtitles are empty
- Fixed nonsense in displaymenurecordings 

2015-04-08:
- Reworked messagesbars
- Fixed area of setupiconbar

2015-04-07:
- Fixed fontsize of {numrecordingsfolder} > 99

2015-04-06:
- Fixed areas in weatherforecast

2015-04-05:
- Added setupparameter "Show timers and infos in mainmenu"
- Added third option for active menubars (gradient)
- Added divider (hyphen) between title and shorttetxts
- Rearranged setup
- Some cleanups

2015-04-03:
- Small fix for coloredbuttons

2015-04-02:
- Rearranged Weatherforecast-Main-View
- Added setupparameter for setting up numbers of menuitemsitems in all menus; cleanups

2015-02-31:
- Fixed bug in plug-weatherforecast-weatherforecast.xml
- Improved position and fontsize of temps in weatherforecast
- Removed some useless pics and code

2015-03-30:
- Changed some positions in weatherforecastdetails
