@@ -383,6 +383,8 @@
     -->
     <fonts>
 		<font name="light">VDROpen Sans Light:Light</font>
-        <font name="semibold">VDROpen Sans Semibold:Semibold</font>
-    </fonts>
+		<font name="semibold">VDROpen Sans Semibold:Semibold</font>
+		<!--<font name="light">Open Sans:Light</font>
+		<font name="semibold">Open Sans:Semibold</font>-->
+	</fonts>
 </globals>
