@@ -5,9 +5,6 @@
 			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
 		</area>
 		<area x="0" y="0" width="100%" height="100%" layer="2">
-			<!--<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuDefault" />-->
-		</area>
-		<area x="0" y="0" width="100%" height="100%" layer="2">
 			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuDefault" />
 		</area>
 		<area x="0" y="0" width="100%" height="11%" layer="3">
