@@ -79,9 +79,12 @@
 			<area condition="not{separator}++{whatsonnow}" x="0" width="16%" transparency="{transLists}" layer="3">
 				<drawimage x="5%" y="0" width="{areawidth}*0.95" height="{areaheight}" imagetype="skinpart" path="cellBackground" />
 			</area>
-			<area condition="not{separator}++{whatsonnow}" x="2%" width="6%" layer="4">
+			<area condition="not{separator}++{whatsonnow}++{channellogoexists}" x="2%" width="6%" layer="4">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="27%" y="20%" width="65%" height="65%" />
 			</area>
+			<areascroll condition="not{separator}++not{channellogoexists}++{whatsonnow}" scrollelement="channel" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="1%" width="9%" layer="4">
+				<drawtext name="channel" x="0" y="15%" align="center" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{channelname}"/>
+			</areascroll>
 			<area condition="not{separator}++{whatsonnow}" x="11%" width="7%" layer="4">
 				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{start}" />
 			</area>
@@ -107,9 +110,12 @@
 			<area condition="not{separator}++{whatsonnext}" x="0" width="16%" transparency="{transLists}" layer="3">
 				<drawimage x="5%" y="0" width="{areawidth}*0.95" height="{areaheight}" imagetype="skinpart" path="cellBackground" />
 			</area>
-			<area condition="not{separator}++{whatsonnext}" x="2%" width="6%" layer="4">
+			<area condition="not{separator}++{whatsonnext}++{channellogoexists}" x="2%" width="6%" layer="4">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="27%" y="20%" width="65%" height="65%" />
 			</area>
+			<areascroll condition="not{separator}++not{channellogoexists}++{whatsonnext}" scrollelement="channel" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="1%" width="9%" layer="4">
+				<drawtext name="channel" x="0" y="15%" align="center" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{channelname}"/>
+			</areascroll>
 			<area condition="not{separator}++{whatsonnext}" x="11%" width="7%" layer="4">
 				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{start}" />
 			</area>
@@ -128,9 +134,12 @@
 			<area condition="not{separator}++{whatsonfavorites}" x="0" width="16%" transparency="{transLists}" layer="3">
 				<drawimage x="5%" y="0" width="{areawidth}*0.95" height="{areaheight}" imagetype="skinpart" path="cellBackground" />
 			</area>
-			<area condition="not{separator}++{whatsonfavorites}" x="2%" width="6%" layer="4">
+			<area condition="not{separator}++{whatsonfavorites}++{channellogoexists}" x="2%" width="6%" layer="4">
 				<drawimage name="logo" imagetype="channellogo" path="{channelid}" x="27%" y="20%" width="65%" height="65%" />
 			</area>
+			<areascroll condition="not{separator}++not{channellogoexists}++{whatsonfavorites}" scrollelement="channel" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="1%" width="9%" layer="4">
+				<drawtext name="channel" x="0" y="15%" align="center" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{channelname}"/>
+			</areascroll>
 			<area condition="not{separator}++{whatsonfavorites}" x="11%" width="7%" layer="4">
 				<drawtext condition="isset{title}" name="menutext" x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{start}" />
 			</area>
