@@ -3,7 +3,7 @@
 
 <displaymessage x="0" y="85%" width="100%" height="10%" fadetime="0" shifttime="{messageShiftTime}" shifttype="bottom" shiftmode="slowed">
 	<background>
-		<area x="0" y="0" width="100%" height="100%" layer="1">
+		<area x="0" y="0" width="100%" height="100%" transparency="{transBackground}" layer="1">
 			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannel"/>
 		</area>
 	</background>
