@@ -3,7 +3,7 @@
 
 <menuplugin x="0" y="0" width="100%" height="100%" fadetime="0">
 	<background>
-		<area x="0" y="0" width="100%" height="100%" layer="1">
+		<area x="0" y="0" width="100%" height="100%" transparency="{transBackground}" layer="1">
 			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNG" />
 			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
 		</area>
