@@ -1,5 +1,8 @@
 shady-KISS-skin History
 -------------------------------------------
+2014-04-05:
+- Added channelname if no channelogo exists in schedules-list
+
 2015-07-04:
 - New displayreplay and displaychannel
 - Removed test- and debug-code
